adicionando atividade ainda incompleta

--- a/atividade1/index.html
+++ b/atividade1/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <h1>Meu portal de notícias</h1>
-        <nav>
+        <nav class="main-menu">
             <ul>
                 <li>
                     <a href="#sports" title="Ir para a seção de esportes">Esportes</a>
@@ -21,7 +21,7 @@
             </ul>
         </nav>
     </header>
-    <section>
+    <section id="sports" class="esporte articles">
         <h2>Esportes</h2>
         <article>
             <img src="./imagens/futebol.jpg" alt="Bola de futebol no gramado" />
@@ -68,7 +68,7 @@
             <a href="#" title="Leia a notícia completa">Ler mais</a>
         </article>
     </section>
-    <section>
+    <section id="economy">
         <h2>Economia</h2>
         <article>
             <img src="./imagens/dolares.jpg" alt="Muitos dólares" />
