--- a/Projeto1_M4/HTML/index.html
+++ b/Projeto1_M4/HTML/index.html
@@ -28,8 +28,8 @@
         </div>
     </header>
     <main>
-        <div class="container">
-            <section>
+        <section class="banner" id="about">
+            <div class="container">
                 <div>
                     <img src="../assets/loja.jpg" alt="Rua comercial onde fica minha loja">
                 </div>
@@ -50,10 +50,12 @@
                         <img src="../assets/playstation.png" alt=" Logo da playstation" height="24px">
                     </div>
                 </div>
-            </section>
-            <section>
+            </div>
+        </section>
+        <section class="contact" id="contact">
+            <div class="container">
                 <h2>Contato</h2>
-                <div>
+                <div class="contact-details">
                     <form>
                         <h3>Fale Conosco</h3>
                         <input type="text" placeholder="Seu nome" required>
@@ -83,14 +85,14 @@
                         </address>
                     </div>
                 </div>
-            </section>
-        </div>
+            </div>
+        </section>
     </main>
     <footer>
         <div class="container">
-            <div>
+            <p>
                 &copy; Games Shop - Todos os direitos reservados - 2022
-            </div>
+            </p>
         </div>
     </footer>
 </body>
