--- a/JavaScript-HTML/index.html
+++ b/JavaScript-HTML/index.html
@@ -13,7 +13,7 @@
         </div>
         <form>
             <input type="number" id="ano_inicial" placeholder="Ano inicial que você deseja comparar">
-            <input type="number" id="ano_atual" placeholder="Ano atual para comparação">
+            <input type="number" id="ano_atual" placeholder="Ano final para comparação">
             <div class="result" id="result">
 
             </div>
