--- a/exercicio-jquery/index.html
+++ b/exercicio-jquery/index.html
@@ -32,10 +32,9 @@
             <div class="error-message" id="error_message"></div>
         </form>
         <ul id="_main_ul">
-            <ul class="item-container">
-                <li class="initial_templete">List is empty</li>
-            </ul>
-            <hr>
+            <div class="initial_item-container">
+                <p class="initial_templete">List is empty</p>
+            </div>
         </ul>
     </div>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
