--- a/exercicio-jquery/index.html
+++ b/exercicio-jquery/index.html
@@ -33,7 +33,7 @@
         </form>
         <ul id="_main_ul">
             <div class="initial_item-container">
-                <p class="initial_templete">List is empty</p>
+                <p class="initial_templete">Lista está vazia</p>
             </div>
         </ul>
     </div>
