--- a/JQuery-Plugin/index.html
+++ b/JQuery-Plugin/index.html
@@ -68,7 +68,7 @@
                     <div class="price">
                         <strong>R$75.000,00</strong>
                     </div>
-                    <button>Tenho Interesse</button>
+                    <button type="button">Tenho Interesse</button>
                 </li>
                 <li class="item-central">
                     <img src="./assets/images/carro-bmw.png" alt="Carro BMW">
@@ -79,7 +79,7 @@
                     <div class="price">
                         <strong>R$75.000,00</strong>
                     </div>
-                    <button>Tenho Interesse</button>
+                    <button type="button">Tenho Interesse</button>
                 </li>
                 <li>
                     <img src="./assets/images/carro-bmw.png" alt="Carro BMW">
@@ -90,7 +90,7 @@
                     <div class="price">
                         <strong>R$75.000,00</strong>
                     </div>
-                    <button>Tenho Interesse</button>
+                    <button type="button">Tenho Interesse</button>
                 </li>
             </ul>
         </div>
@@ -109,7 +109,7 @@
                         <del>R$100.000,00</del>
                         <strong>R$75.000,00</strong>
                     </div>
-                    <button>Tenho Interesse</button>
+                    <button type="button">Tenho Interesse</button>
                 </li>
                 <li class="item-central">
                     <img src="./assets/images/carro-bmw.png" alt="Carro BMW">
@@ -121,7 +121,7 @@
                         <del>R$100.000,00</del>
                         <strong>R$75.000,00</strong>
                     </div>
-                    <button>Tenho Interesse</button>
+                    <button type="button">Tenho Interesse</button>
                 </li>
                 <li>
                     <img src="./assets/images/carro-bmw.png" alt="Carro BMW">
@@ -133,7 +133,7 @@
                         <del>R$100.000,00</del>
                         <strong>R$75.000,00</strong>
                     </div>
-                    <button>Tenho Interesse</button>
+                    <button type="button">Tenho Interesse</button>
                 </li>
             </ul>
         </div>
