--- a/exercicio_plugins_jquery/index.html
+++ b/exercicio_plugins_jquery/index.html
@@ -14,28 +14,28 @@
         <form>
             <div class="dados-pessoais">
                 <h2>Dados Pessoais</h2>
-                <label for="name">Nome Completo:</label>
+                <label for="input_name">Nome Completo:</label>
                 <input type="text" name="name" id="input_name">
-                <label for="email">E-mail:</label>
+                <label for="email_input">E-mail:</label>
                 <input type="text" name="email" id="email_input">
                 <div class="half">
-                    <label for="tel">Telefone:</label>
+                    <label for="tel_input">Telefone:</label>
                     <input type="number" name="tel" id="tel_input" class="cpf-class">
-                    <label for="cpf">CPF:</label>
+                    <label for="cpf_input">CPF:</label>
                     <input type="number" name="cpf" id="cpf_input" class="cpf-class">
                 </div>
             </div>
             <div class="endereco">
                 <h2>Endereço:</h2>
                 <div class="endereco-rua">
-                    <label for="street">Rua:</label>
+                    <label for="street_input">Rua:</label>
                     <input type="text" name="street" id="street_input">
-                    <label for="bairro">Bairro:</label>
+                    <label for="bairro_input">Bairro:</label>
                     <input type="text" name="bairro" id="bairro_input">
                     <div class="half">
-                        <label for="houseNum">Número:</label>
+                        <label for="house_number_input">Número:</label>
                         <input type="number" name="houseNum" id="house_number_input">
-                        <label for="cep">CEP:</label>
+                        <label for="cep_input">CEP:</label>
                         <input type="number" name="cep" id="cep_input">
                     </div>
                 </div>
@@ -43,5 +43,11 @@
             <button type="submit">Enviar</button>
         </form>
     </div>
+
+    <script src="https://code.jquery.com/jquery-migrate-3.4.0.min.js"></script>
+    <script src="./scripts/jquery.mask.min.js"></script>
+    <script src="./scripts/jquery.validate.min.js"></script>
+    <script src="./scripts/messages_pt_BR.min.js"></script>
+    <script src="./scripts/main.js"></script>
 </body>
 </html>
