--- a/exercicio_plugins_jquery/index.html
+++ b/exercicio_plugins_jquery/index.html
@@ -42,7 +42,7 @@
             </div>
             <button type="submit">Enviar</button>
         </form>
-    </div>
+    </div><!-- container -->
 
     <script src="https://code.jquery.com/jquery-migrate-3.4.0.min.js"></script>
     <script src="./scripts/jquery.mask.min.js"></script>
