--- a/SASS_Pratica/index.html
+++ b/SASS_Pratica/index.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./build/main.css">
 </head>
 <body>
-    <h1>Teste</h1>
+    <header>
+        <div class="container">
+            <h1>Projeto com SASS</h1>
+        </div>
+    </header>
+    <div class="form-container container">
+        <h2>Se inscreva na Newsletter para receber dicas sobre CSS</h2>
+        <form>
+            <label for="full-name">Nome Completo:</label>
+            <input type="text" id="full-name">
+            <label for="email">Seu melhor e-mail</label>
+            <input type="email" id="email">
+            <button type="submit">Cadastrar</button>
+        </form>
+    </div>
 </body>
 </html>
