fix: defining server path for images

--- a/Aulas/Email/index.html
+++ b/Aulas/Email/index.html
@@ -11,7 +11,7 @@
             <thead>
                 <tr>
                     <th style="padding: 32px 0;">
-                        <img src="./assets/EBAC_Banking.png" alt="EBAC Banking">
+                        <img src="https://ebac-email-static-server.vercel.app/EBAC_Banking.png" alt="EBAC Banking">
                     </th>
                 </tr>
             </thead>
@@ -57,13 +57,13 @@
                     <td style="padding-top: 128px;">
                         <center>
                             <a href="https://instagram.com">
-                                <img src="./assets/instagram.png" alt="Logo do instagram">
+                                <img src="https://ebac-email-static-server.vercel.app/instagram.png" alt="Logo do instagram">
                             </a>
                             <a href="https://facebook.com">
-                                <img src="./assets/facebook.png" alt="Logo do Facebook">
+                                <img src="https://ebac-email-static-server.vercel.app/facebook.png" alt="Logo do Facebook">
                             </a>
                             <a href="https://twitter.com">
-                                <img src="./assets/twitter.png" alt="Logo do Twitter">
+                                <img src="https://ebac-email-static-server.vercel.app/twitter.png" alt="Logo do Twitter">
                             </a>
                         </center>
                     </td>
